--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,11 +24,11 @@ jobs:
           registry-url: https://registry.npmjs.org/
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm   install
+        run: pnpm  install
       - name: build
         run: pnpm  build
       - name: publish
-        run: npm publish
+        run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
