--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-ui",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.umd.js",
   "module": "dist/today-ui.es.js",
@@ -18,6 +18,7 @@
   "files": [
     "dist/",
     "src/",
+    "public/",
     "LICENSE",
     "README.md",
     "CHANGELOG.md"
@@ -26,8 +27,6 @@
     "dev": "storybook dev -p 6006",
     "build": "vite build && pnpm build:type",
     "build:type": "vue-tsc --emitDeclarationOnly   -p tsconfig.type.json",
-    "build:base": "pnpm build --filter=use-floating",
-    "buildt": "pnpm build:type --filter=use-floating",
     "publish": "pnpm build && cd ./packages/use-floating &&  pnpm publish",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
@@ -42,34 +41,37 @@
     "@storybook/addon-essentials": "^7.3.0",
     "@storybook/addon-interactions": "^7.3.0",
     "@storybook/addon-links": "^7.3.0",
+    "@storybook/addon-mdx-gfm": "^7.2.2",
     "@storybook/blocks": "^7.3.0",
     "@storybook/cli": "^7.3.0",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/vue3": "^7.3.0",
     "@storybook/vue3-vite": "^7.3.0",
-    "@storybook/addon-mdx-gfm": "^7.2.2",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^18.17.0",
+    "@types/postcss-import": "^14.0.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/compiler-core": "^3.3.4",
     "@vue/compiler-sfc": "^3.2.33",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
+    "jsdom": "^22.1.0",
     "less": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "storybook": "^7.2.3",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.17.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.4.0",
-    "jsdom": "^22.1.0",
-    "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vitest": "^0.33.0",
