--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,10 @@
     "globals.d.ts",
     "env.d.ts",
     "src/**/*",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "src/**/*.tsx",
+    "src/**/*.ts",
+    "package.json"
   ],
   "exclude": [
     "src/**/__tests__/*"
