--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.umd.js",
   "module": "dist/today-ui.es.js",
@@ -28,6 +28,7 @@
   ],
   "scripts": {
     "dev": "storybook dev -p 6006",
+    "tsup": "tsup ./src/index.ts --experimental-dts",
     "build": "vite build && pnpm build:type",
     "bd": "tsc -p tsconfig.app.json",
     "build:type": "vue-tsc  -p tsconfig.type.json",
@@ -41,11 +42,13 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.43.1",
     "@storybook/addon-essentials": "^8.0.2",
     "@storybook/addon-interactions": "^8.0.2",
     "@storybook/addon-links": "^8.0.2",
     "@storybook/blocks": "^8.0.2",
     "@storybook/cli": "^8.0.2",
+    "@storybook/test": "^8.0.2",
     "@storybook/vue3": "^8.0.2",
     "@storybook/vue3-vite": "^8.0.2",
     "@tsconfig/node20": "~20.1.2",
@@ -63,6 +66,7 @@
     "@vue/tsconfig": "^0.4.0",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
+    "i": "^0.3.7",
     "jsdom": "^22.1.0",
     "less": "^4.2.0",
     "npm-run-all": "^4.1.5",
@@ -73,15 +77,14 @@
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "storybook": "^8.0.2",
+    "tsup": "^8.0.2",
     "typescript": "~5.1.6",
     "vite": "^5.2.2",
     "vitest": "^0.33.0",
-    "@storybook/test": "^8.0.2",
     "vue-tsc": "^2.0.7"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.6",
-
     "lodash": "^4.17.21",
     "vue": "^3.4.21"
   },
