--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1",
     "@microsoft/api-extractor": "^7.43.1",
-    "@storybook/addon-essentials": "^8.0.2",
-    "@storybook/addon-interactions": "^8.0.2",
-    "@storybook/addon-links": "^8.0.2",
-    "@storybook/blocks": "^8.0.2",
-    "@storybook/cli": "^8.0.2",
-    "@storybook/test": "^8.0.2",
-    "@storybook/vue3": "^8.0.2",
-    "@storybook/vue3-vite": "^8.0.2",
+    "@storybook/addon-essentials": "^8.1.0-beta.0",
+    "@storybook/addon-interactions": "^8.1.0-beta.0",
+    "@storybook/addon-links": "^8.1.0-beta.0",
+    "@storybook/addon-mdx-gfm": "^8.1.0-beta.0",
+    "@storybook/blocks": "^8.1.0-beta.0",
+    "@storybook/cli": "^8.1.0-beta.0",
+    "@storybook/test": "^8.1.0-beta.0",
+    "@storybook/vue3": "^8.1.0-beta.0",
+    "@storybook/vue3-vite": "^8.1.0-beta.0",
     "@tsconfig/node20": "~20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.17.0",
@@ -66,7 +68,6 @@
     "@vue/tsconfig": "^0.4.0",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
-    "i": "^0.3.7",
     "jsdom": "^22.1.0",
     "less": "^4.2.0",
     "npm-run-all": "^4.1.5",
@@ -76,7 +77,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
-    "storybook": "^8.0.2",
+    "storybook": "^8.1.0-beta.0",
     "tsup": "^8.0.2",
     "typescript": "~5.1.6",
     "vite": "^5.2.2",
