--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   ],
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "tsup": "tsup ./src/index.ts --experimental-dts",
     "dts": "api-extractor run --local",
     "build": "vite build && pnpm build:type && pnpm dts && rm -rf dist/src",
     "bd": "tsc -p tsconfig.app.json",
@@ -43,31 +42,30 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1",
-    "@microsoft/api-extractor": "^7.43.1",
-    "@storybook/addon-essentials": "^8.1.0-beta.0",
-    "@storybook/addon-interactions": "^8.1.0-beta.0",
-    "@storybook/addon-links": "^8.1.0-beta.0",
-    "@storybook/addon-mdx-gfm": "^8.1.0-beta.0",
-    "@storybook/blocks": "^8.1.0-beta.0",
-    "@storybook/cli": "^8.1.0-beta.0",
-    "@storybook/test": "^8.1.0-beta.0",
-    "@storybook/vue3": "^8.1.0-beta.0",
-    "@storybook/vue3-vite": "^8.1.0-beta.0",
-    "@tsconfig/node20": "~20.1.2",
+    "@chromatic-com/storybook": "^1.3.5",
+    "@microsoft/api-extractor": "^7.43.4",
+    "@storybook/addon-actions": "^8.0.10",
+    "@storybook/addon-essentials": "~8.0.10",
+    "@storybook/addon-interactions": "~8.0.10",
+    "@storybook/addon-links": "~8.0.10",
+    "@storybook/blocks": "~8.0.10",
+    "@storybook/cli": "~8.0.10",
+    "@storybook/test": "~8.0.10",
+    "@storybook/vue3": "~8.0.10",
+    "@storybook/vue3-vite": "~8.0.10",
+    "@tsconfig/node20": "~20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.11.30",
+    "@types/lodash": "^4.17.1",
+    "@types/node": "^20.12.11",
     "@types/postcss-import": "^14.0.3",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-core": "^3.4.21",
-    "@vue/compiler-sfc": "^3.4.21",
-    "@vue/test-utils": "^2.4.5",
+    "@vue/compiler-core": "^3.4.27",
+    "@vue/compiler-sfc": "^3.4.27",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
     "jsdom": "^22.1.0",
     "less": "^4.2.0",
@@ -75,20 +73,19 @@
     "postcss": "^8.4.38",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark-gfm": "^3.0.1",
-    "storybook": "^8.1.0-beta.0",
-    "tsup": "^8.0.2",
+    "storybook": "~8.0.10",
     "typescript": "~5.1.6",
-    "vite": "^5.2.2",
+    "vite": "^5.2.11",
     "vitest": "^0.33.0",
-    "vue-tsc": "^2.0.7"
+    "vue-tsc": "^2.0.17"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.6",
     "lodash": "^4.17.21",
-    "vue": "^3.4.21"
+    "vue": "^3.4.27"
   },
   "peerDependencies": {
     "vue": "^3.3.4"
