--- a/tsconfig.type.json
+++ b/tsconfig.type.json
@@ -4,6 +4,7 @@
       "verbatimModuleSyntax": false,
       "noEmit": false,
       "declaration": true,
+      "declarationMap": true,
       "emitDeclarationOnly": true,
       "incremental": false,
       "strictNullChecks": false,
