--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@storybook/vue3-vite": "^8.1.1",
     "@tsconfig/node20": "~20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.17.1",
     "@types/node": "^20.12.11",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.3.2",
@@ -76,7 +75,7 @@
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.6",
-    "lodash": "^4.17.21",
+    "radash": "^12.1.0",
     "vue": "^3.4.27"
   },
   "peerDependencies": {
