--- a/.github/workflows/page-publish.yml
+++ b/.github/workflows/page-publish.yml
@@ -26,7 +26,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install
-        run: pnpm install
+        run: pnpm install  --no-frozen-lockfile
       - name: Build
         run: pnpm run story:build
       - uses: actions/configure-pages@v2
